# snow-crystal-classifier

./: .pre-commit-config.yaml  README.md  classifier.py  main.py  pyproject.toml  visualize_tree.py
.zed/: settings.json
output/: decision_tree_rules.txt  results.csv
scripts/: main.py  utils.py  visualize_tree.py
src/snow_crystal_classifier/: __init__.py  classifier.py  utils.py
