[project]
name = "snow-crystal-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.8",
    "numpy>=1.26.0",
    "opencv-python>=4.12.0.88",
    "pandas>=2.3.3",
    "rich>=14.0.0",
    "scikit-learn>=1.4.0",
    "seaborn>=0.13.0",
]
